css/styles.css
@font-face {
    font-family: 'Roboto';
    src: url(assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf);
}

body {
    margin: 0;
    font-family: 'Roboto';
}

#topBanner {
    background-color: rgb(255, 255, 255) !important;
    display: flex;
    justify-content: center;
}

#topBanner img {
    height: 80px;
}

